# dstauffman2

./: .gitattributes  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  README.rst  __init__.py  dcs2  dcs2.bat  dcs2python.sh  mypy.ini  pyproject.toml  setup.py  utils.py
apps/: __init__.py
apps/bac_gui/: __main__.py  bac_gui.py  test_bac_gui.py
archery/scoring/: __init__.py  __main__.py  scoring.py  script_plotting.py  test_scoring.py
archery/tournaments/: __init__.py  bales.py  brackets.py  constants.py  main.py  simulations.py  utils.py
archery/tournaments/scripts/: script_testing.py
doc/: Spyder_Installation.txt  correct_shebangs.txt  count_lines_of_code.py  ipython_magics.py  plotting_without_pyplot.py  tricks.txt
doc/Enum Lessons Learned/: enum_lessons.py
dstauffman2/: __init__.py  __main__.py  parser.py  paths.py  utils.py  version.py
dstauffman2/apps/: __init__.py
dstauffman2/apps/bac_gui/: __init__.py  __main__.py  bac_gui.py  test_bac_gui.py  test_bac_gui_coverage.bat
dstauffman2/apps/gps_gui/: plot_location_outside.m
dstauffman2/apps/gps_gui/bookstore/: 02_bookstore.txt
dstauffman2/apps/gps_gui/data/: create_test_file.m  run_create_test_file.m
dstauffman2/apps/gps_gui/durand/: 02_durand.txt
dstauffman2/apps/gps_gui/gui/: GPS_Range.m  directions.m  distance.m  distancing.m  draw_bearing.m  eccentric.m  gps_gui.fig  gps_gui.m  history.m  main_loop.m  plot_location.m  plot_map.m  position_finder.m  post_processing.m  satellite_position_and_bias.m  update_navigation.m
dstauffman2/apps/gps_gui/images/: welcome_text.txt
dstauffman2/apps/gps_gui/main_quad/: 02_main_quad.txt
dstauffman2/apps/gps_gui/oval/: 02_oval.txt
dstauffman2/apps/gps_gui/presentation/: GPS_Paper.doc  GPS_Presentation_ver1.ppt
dstauffman2/apps/gps_gui/tower/: 02_tower.txt
dstauffman2/archery/: __init__.py
dstauffman2/archery/scoring/: __init__.py  __main__.py  scoring.py  script_plotting.py  test_scoring.py
dstauffman2/archery/tournaments/: __init__.py  bales.py  brackets.py  constants.py  main.py  simulations.py  utils.py
dstauffman2/archery/tournaments/scripts/: script_testing.py
dstauffman2/commands/: __init__.py  camera.py  help.py  pdfs.py  runtests.py
dstauffman2/data/: README.md
dstauffman2/doc/: Spyder_Installation.txt  count_lines_of_code.py  docstring_example.py  ipython_magics.py  isort.txt  plotting_without_pyplot.py
dstauffman2/doc/DStauffman_Slides/: dstauffman_presentation.tex
dstauffman2/doc/Enum Lessons Learned/: Enum Lessons Learned.tex  enum_lessons.py
dstauffman2/doc/Users_Guide/: Users_Guide.tex
dstauffman2/games/: __init__.py  brick.py  cards.py  fiver.py  knight.py  knight2.pyx  knight_profile.py  knight_setup.py  rubik.py  test_cards.py  test_fiver.py  test_fiver_coverage.bat  test_knight.py
dstauffman2/games/pentago/: __init__.py  __main__.py  classes.py  constants.py  gui.py  plotting.py  utils.py
dstauffman2/games/pentago/tests/: __init__.py  run_all_docstrings.py  run_all_tests.py  test_classes.py  test_constants.py  test_gui.py  test_pentago_coverage.bat  test_plotting.py  test_utils.py
dstauffman2/games/scrabble/: __init__.py  __main__.py  classes.py  constants.py  gui.py  plotting.py  run_scrabble.bat  run_scrabble.py  special.py  utils.py
dstauffman2/games/scrabble/tests/: __init__.py  run_all_docstrings.py  run_all_tests.py  test_classes.py  test_constants.py  test_gui.py  test_plotting.py  test_special.py  test_utils.py
dstauffman2/games/tictactoe/: __init__.py  __main__.py  classes.py  constants.py  gui.py  plotting.py  run_tictactoe.py  utils.py
dstauffman2/games/tictactoe/tests/: __init__.py  run_all_docstrings.py  run_all_tests.py  test_classes.py  test_constants.py  test_gui.py  test_plotting.py  test_utils.py
dstauffman2/imageproc/: __init__.py  pdfs.py  photos.py  test_photos.py
dstauffman2/images/: create_test_images.py  create_test_pdf_books.py
dstauffman2/music/: O_My_Beloved_Father.py  bartok_example.py
dstauffman2/puzzles/: __init__.py  codefights_2017_01_17.py  codefights_2017_01_17_submit.py  codefights_2017_01_17_tiny.py  codefights_2017_02_21.py  cube_sum_solver.py  matts_puzzle_2016_12_26.py
dstauffman2/scripts/: clean_up_whitespace.py  combine_pdfs.py  copy_in_raw.py  do_batch_resize.py  move_subfiles.py  nytimes_wordsolver.py  print_pages_pdfs.py  rename_uppers.py  renumber_pictures.py  split_pdf_pages.py  zoh_testing.py
dstauffman2/tests/: .coveragerc  __init__.py  run_all_docstrings.py  run_all_tests.py  test_commands_camera.py  test_commands_help.py  test_commands_runtests.py  test_parser.py  test_paths.py  test_utils.py
games/: brick.py  cards.py  fiver.py  knight.py  knight2.pyx  knight_profile.py  rubik.py  test_cards.py  test_fiver.py  test_knight.py  test_knight_coverage.bat
games/pentago/: __main__.py  classes.py  constants.py  gui.py  plotting.py  utils.py
games/pentago/tests/: run_all_docstrings.py  run_all_tests.py  test_classes.py  test_constants.py  test_gui.py  test_plotting.py  test_utils.py
games/scrabble/: __init__.py  __main__.py  classes.py  constants.py  gui.py  plotting.py  run_scrabble.py  special.py  utils.py
games/scrabble/tests/: run_all_docstrings.py  run_all_tests.py  test_constants.py  test_gui.py  test_plotting.py  test_scrabble_coverage.bat  test_special.py  test_utils.py
games/tictactoe/: __main__.py  classes.py  constants.py  gui.py  plotting.py  run_tictactoe.py  utils.py
games/tictactoe/tests/: __init__.py  run_all_docstrings.py  run_all_tests.py  test_classes.py  test_constants.py  test_gui.py  test_plotting.py  test_tictactoe_coverage.bat  test_utils.py
imageproc/: __init__.py  photos.py  test_photos.py
music/: bartok_example.py
puzzles/: codefights_2017_01_17.py  codefights_2017_01_17_submit.py  codefights_2017_01_17_tiny.py  codefights_2017_02_21.py  cube_sum_solver.py  matts_puzzle_2016_12_26.py
tests/: .coveragerc  Run_Coverage.bat  run_all_docstrings.py  run_all_tests.py  test_utils.py
